@@ -26,9 +26,8 @@ import com.unboundid.scim2.common.annotations.Schema;
 import com.unboundid.scim2.common.annotations.Attribute;
 
 import java.net.URI;
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 
 /**
@@ -143,8 +142,7 @@ public class ResourceTypeResource extends BaseScimResource
     this.endpoint = endpoint;
     this.schema = schema;
     this.schemaExtensions = schemaExtensions == null ?
-        null : Collections.unmodifiableList(
-        new ArrayList<SchemaExtension>(schemaExtensions));
+        null : List.copyOf(schemaExtensions);
   }
 
   /**
@@ -204,7 +202,7 @@ public class ResourceTypeResource extends BaseScimResource
 
   /**
    * This class holds information about schema extensions for resource
-   * types.  It contains a urn and a boolean indicating if it's required
+   * types.  It contains an urn and a boolean indicating if it's required
    * or optional.
    */
   public static class SchemaExtension
@@ -260,12 +258,10 @@ public class ResourceTypeResource extends BaseScimResource
     }
 
     /**
-     * Gets the boolean indicating if the schema is required
-     * for this schema extension (for a the resource type this
-     * schema extension is part of).
+     * Indicates whether the schema is required for this schema extension
+     * (for the resource type this schema extension is part of).
      *
-     * @return boolean boolean indicating if the schema is required
-     * for this schema extension.
+     * @return Whether the schema is required for this schema extension.
      */
     public boolean isRequired()
     {
